fixed spacing on sections on larger screens

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 h2 {
@@ -136,28 +137,28 @@ form {
 
 input,
 textarea {
-    margin-bottom: 24px;
-    font-size: 20px;
-    padding: 6px 12px;
+  margin-bottom: 24px;
+  font-size: 20px;
+  padding: 6px 12px;
 }
 
 /* FOOTER SECTION */
 footer {
-    background-color: #aaf5ff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #aaf5ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__logo {
-    max-width: 480px;
-    margin-bottom: 16px;
+  max-width: 480px;
+  margin-bottom: 16px;
 }
 
 .footer__links {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .footer__link {
-    padding: 0 16px;
+  padding: 0 16px;
 }
